@@ -322,5 +322,6 @@ enum {
   TIMESTAMP_LINE_SIMPLE,
   TIMESTAMP_LINE_EXTENDED,
   TIMESTAMP_LINE_PER_SECOND,
+  TIMESTAMP_LINE_DELTA,
   TIMESTAMP_LINE_NR_OF_OPTIONS, // must be last
 };
